# ellipticoin-ethereum-bridge

./: .eslintrc.js  .gitignore  index.mjs  package-lock.json  package.json
ellipticoin_bridge/: package-lock.json  package.json
ellipticoin_bridge/artifacts/: Address.json  ECCBToken.json  ERC20.json  MockUniswapV2Router01.json  SafeMath.json  TransferHelper.json  UniswapMock.json  UniswapV2Library.json  UniswapV2Router01.json
ellipticoin_bridge/contracts/: ECCBToken.sol
ellipticoin_bridge/scripts/: buy.js  deploy.js  deploy_and_setup.js  mint.js  mint_and_swap.js  sell.js  swap_and_burn.js
ellipticoin_bridge/test/: ECCBToken.js
ethereum_bridge/: Cargo.toml
ethereum_bridge/src/: ethereum_bridge.rs  lib.rs
scripts/: deploy.js
